added a --proper-size commandline option to fix that right up =)

Sorry StriderZ ;)

-------------------------------------------------------------------------------

Thu Jan 20 17:41:00 CST 2000
(thebard)

Added a config popup that lets you toggle between a flat rotating colored square and a rotating 3d purple cube. Anyone ahve any suggestions for any
E textures i could slap on the sides?

-------------------------------------------------------------------------------

Sun Jan 23 17:30:27 CST 2000
(thebard)

Added saving for configurations. Also started to add lighting. As you can see, its going horribly wrong right now. I'll fix it as soon as i can.

-------------------------------------------------------------------------------

Sun Jan 23 20:44:15 CST 2000
(thebard)

New popup for lighting. Turn it on or off, ect. Only works for the cube, and it still doesnt work correctly.

-------------------------------------------------------------------------------

Mon Jan 24 22:43:58 CST 2000
(thebard)

Well, I broke alot of stuff in the Demo. The important part is that the
light mapped cube works. I need to totally redo the api interface to
enable the correct stecil, depth, and accumulation minimums.

-------------------------------------------------------------------------------

Tue Jan 25 11:06:08 CST 2000
(thebard)

Ok, the Demo now works corretly. Lighting works on the cube but NOT on the
square. The square doesnt have and back face normals and i really dont want
to set any up, since its just supposed to show how to draw a simple non
lighted polygon with colors. Next task is to solidify the glx epplet epi.

-------------------------------------------------------------------------------

Tue Jan 25 15:07:32 CST 2000
(thebard)

Altered the api so that you can define ALL the nitty gritty GLX stuf like
accumulation buffers for red, green, blue, alpha channels, depth buffers,
stencil buffers, ect. I'll Add default easier to use calls next.
